--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -6,8 +6,13 @@
   background-position: 85% 71%;
 
   @media (max-width:$tablet-width-max) {
-    background-size: 61%,cover, cover;
-    background-position: 170% 33%,50% -128px,center;
+    background-size: 61%, cover, cover;
+    background-position: 170% 33%, 50% -128px, center;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    background-size: 94%, cover, cover;
+    background-position: 124% 22%, 55% -126px, center;
   }
 
   @media (min-resolution: 2dppx) {
@@ -34,6 +39,13 @@
     font-size: 60px;
     line-height: 70px;
   }
+
+  @media (max-width: $mobile-width-max) {
+    width: 277px;
+    padding-left: 0;
+    font-size: 40px;
+    line-height: 47px;
+  }
 }
 
 .page-header__description {
@@ -54,6 +66,14 @@
     line-height: 30px;
   }
 
+  @media (max-width: $mobile-width-max) {
+    width: 272px;
+    margin-bottom: 40px;
+    padding-left: 51px;
+    font-size: 16px;
+    line-height: 25px;
+  }
+
   &::before {
     position: absolute;
     content: "";
@@ -67,6 +87,12 @@
       width: 33px;
       top: 19px;
       left: 66px;
+    }
+
+    @media (max-width: $mobile-width-max) {
+      width: 32px;
+      top: 16px;
+      left: 4px;
     }
   }
 }
@@ -82,6 +108,10 @@
   border: none;
   background-color: $feedback-color;
 
+  &--small {
+    display: none;
+  }
+
   &:hover,
   &:focus,
   &:active {
@@ -92,6 +122,20 @@
     width: 379px;
     margin-bottom: 162px;
     margin-left: 114px;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    margin-bottom: 70px;
+
+    &--large {
+      display: none;
+    }
+
+    &--small {
+      display: block;
+      width: 287px;
+      margin-left: 0;
+    }
   }
 }
 
