--- a/source/sass/common.scss
+++ b/source/sass/common.scss
@@ -29,4 +29,9 @@
     padding-left: 25px;
     padding-right: 25px;
   }
+
+  @media (max-width: $mobile-width-max) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
