--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,5 @@
 @import "./blocks/site-button.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/header-nav.scss";
+@import "./blocks/features.scss";
+@import "./blocks/review.scss";
