--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $white-color: #ffffff;
 $header-back-color: #1B2D37;
 $feedback-color: #00B2FF;
 $feedback-hover-color: #255d75;
+$border-color: #EBEBEB;
 
 $mobile-width-max: 767px;
 $tablet-width-max: 1023px;
