--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,9 +6,11 @@
 @import "./global.scss";
 @import "./common.scss";
 @import "./blocks/page.scss";
+@import "./blocks/form.scss";
 @import "./blocks/site-button.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/header-nav.scss";
 @import "./blocks/features.scss";
 @import "./blocks/review.scss";
 @import "./blocks/services.scss";
+@import "./blocks/feedback.scss";
