--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,10 +1,11 @@
 $text-color:#666666;
 $white-color: #ffffff;
-$header-back-color: #1B2D37;
-$feedback-color: #00B2FF;
+$header-back-color: #1b2d37;
+$feedback-color: #00b2ff;
 $feedback-hover-color: #255d75;
-$border-color: #EBEBEB;
-$services-item-back: #C4C4C4;
+$border-color: #ebebeb;
+$services-item-back: #c4c4c4;
+$input-back-color: rgba(255,255,255, 0.1);
 
 $mobile-width-max: 767px;
 $tablet-width-max: 1023px;
