--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,11 +1,11 @@
 .services {
   padding-top: 88px;
-  padding-bottom: 124px;
+  padding-bottom: 127px;
   background-color: $header-back-color;
 
   @media (max-width: $tablet-width-max) {
     padding-top: 46px;
-    padding-bottom: 78px;
+    padding-bottom: 80px;
   }
 
   @media (max-width: $mobile-width-max) {
@@ -57,7 +57,7 @@
 }
 
 .services__item {
-  background-size: contain;
+  background-size: cover;
 
   &--production {
     @include bg-image("services-production-desktop@1x.png");
@@ -171,11 +171,11 @@
   @media (max-width: $mobile-width-max) {
     padding-top: 21px;
     padding-left: 35px;
-  }
 
-  &--production {
-    &::after {
-      right: 0;
+    &--production {
+      &::after {
+        right: 0;
+      }
     }
   }
 }
