--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,4 @@
 @import "./blocks/review.scss";
 @import "./blocks/services.scss";
 @import "./blocks/feedback.scss";
+@import "./blocks/page-footer.scss";
