--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,8 @@
 $text-color:#666666;
 $white-color: #ffffff;
 $header-back-color: #1b2d37;
+$footer-links-color: rgba(27, 45, 55, 0.5);
+$footer-border-color: rgba(98, 105, 98, 0.2);
 $feedback-color: #00b2ff;
 $feedback-hover-color: #255d75;
 $border-color: #ebebeb;
