--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -17,7 +17,7 @@
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 299px;
   gap: 30px;
-  width: 1170px;
+  width: 83%;
   margin: 0 auto;
 
   @media (max-width: $tablet-width-max) {
@@ -100,7 +100,7 @@
 
   @media (max-width: $tablet-width-max) {
     padding-top: 65px;
-    padding-right: 21px;
+    padding-right: 20px;
     padding-left: 24px;
   }
 
