--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,6 +1,6 @@
 .feedback {
   padding-top: 93px;
-  padding-bottom: 112px;
+  padding-bottom: 113px;
   background-color: $feedback-color;
 
   background-image: url("../img/icon-header-triangle.svg"), url("../img/triangles-feedback.svg");
@@ -12,6 +12,11 @@
     padding-bottom: 104px;
     background-image: none;
   }
+
+  @media (max-width: $mobile-width-max) {
+    padding-top: 28px;
+    padding-bottom: 43px;
+  }
 }
 
 .feedback__container {
@@ -22,8 +27,13 @@
   }
 
   @media (max-width: $tablet-width-max) {
-    padding-left: 87px;
+    padding-left: 91px;
     padding-right: 87px;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -34,6 +44,11 @@
   @media (max-width: $tablet-width-max) {
     margin-bottom: 14px;
   }
+
+  @media (max-width: $mobile-width-max) {
+    margin-bottom: 12px;
+    line-height: 41px;
+  }
 }
 
 .feedback__description {
@@ -41,12 +56,15 @@
   margin-bottom: 53px;
   padding-left: 4px;
   color: $white-color;
+
+  @media (max-width: $mobile-width-max) {
+    margin-bottom: 24px;
+    padding-left: 0;
+  }
 }
 
 .feedback__form {
   position: relative;
-  width: 574px;
-  padding-left: 6px;
 
   &::before {
     position: absolute;
@@ -62,28 +80,29 @@
       background-image: url("../img/feedback-airplane@2x.png");
       background-size: contain;
     }
-  }
 
-  @media (max-width: $tablet-width-max) {
-    width: auto;
+    @media (max-width: $tablet-width-max) {
+      display: none;
+    }
   }
 }
 
 .feedback__form-field {
   margin-bottom: 40px;
+  width: 47%;
 
-  &:first-child {
-    margin-right: 30px;
+  @media (max-width: $mobile-width-max) {
+    width: 100%;
+    margin-bottom: 30px;
   }
 }
 
 .feedback__form-field input {
-  width: 269px;
+  width:100%;
   height: 48px;
   padding-left: 14px;
 
   @media (max-width: $tablet-width-max) {
-    width: 280px;
     height: 53px;
   }
 }
@@ -91,12 +110,17 @@
 .feedback__form textarea {
   width: 100%;
   height: 154px;
-  margin-bottom: 44px;
+  margin-bottom: 41px;
   padding: 14px;
 
   @media (max-width: $tablet-width-max) {
     height: 160px;
     margin-bottom: 46px;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    height: 103px;
+    margin-bottom: 30px;
   }
 }
 
@@ -108,9 +132,22 @@
     width: 279px;
     margin-right: 72px;
   }
+
+  @media (max-width: $mobile-width-max) {
+    width: 100%;
+    margin-bottom: 22px;
+  }
 }
 
 .feedback__checkbox {
   width: 230px;
   padding-top: 8px;
+
+  @media (max-width: $tablet-width-max) {
+    margin-right: 8px;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    padding-left: 33px;
+  }
 }
