--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  @media (max-width: $mobile-width-max) {
+    flex-direction: column;
+  }
 }
 
 .form__field input,
