--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -4,7 +4,7 @@
   background-color: $feedback-color;
 
   background-image: url("../img/icon-header-triangle.svg"), url("../img/triangles-feedback.svg");
-  background-position: -855px -178px, 1556px 35px;
+  background-position: -855px -178px, 110% 35px;
   background-repeat: no-repeat, no-repeat;
 
   @media (max-width: $tablet-width-max) {
@@ -85,6 +85,12 @@
       display: none;
     }
   }
+}
+
+.feedback__form-inner {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .feedback__form-field {
