--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -14,10 +14,19 @@
 }
 
 .services__container {
-  @media (min-width: $desktop-width) {
-    margin: 0;
-    padding-left: 375px;
-    padding-right: 375px;
+  margin: 0;
+  padding-left: 375px;
+  padding-right: 375px;
+
+  @media (max-width: $tablet-width-max) {
+    margin: 0 auto;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    padding-left: 15px;
+    padding-right: 11px;
   }
 }
 
