--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -54,6 +54,19 @@
   }
 }
 
+.page-footer__link-svg {
+  fill: $footer-social-links;
+}
+
+.page-footer__link {
+  &:hover,
+  &:focus {
+    .page-footer__link-svg {
+      fill: $footer-links-color;
+    }
+}
+}
+
 .page-footer__logo {
   display: block;
   margin-bottom: 52px;
@@ -261,7 +274,44 @@
 
 .page-footer__nav {
   @media (max-width: $mobile-width-max) {
+    position: relative;
     cursor: pointer;
+
+    &::before {
+      position: absolute;
+      content: "";
+      width: 16px;
+      height: 1px;
+      top: 37px;
+      right: 17px;
+      background-color: $services-item-back;
+    }
+
+    &::after {
+      display: none;
+      position: absolute;
+      content: "";
+      width: 1px;
+      height: 16px;
+      top: 30px;
+      right: 25px;
+      background-color: $services-item-back;
+    }
+
+    &--closed {
+      &::after {
+        display: block;
+      }
+    }
+
+    &--nojs {
+      cursor: auto;
+
+      &::before,
+      &::after {
+        display: none;
+      }
+    }
   }
 }
 
@@ -276,7 +326,12 @@
     }
 
     &--opened {
+      display: none;
       padding-bottom: 33px;
+    }
+
+    &--closed {
+      display: block;
     }
   }
 }
