--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,7 @@ $feedback-hover-color: #255d75;
 $border-color: #ebebeb;
 $services-item-back: #c4c4c4;
 $input-back-color: rgba(255,255,255, 0.1);
+$footer-social-links:#cdcdcd;
 
 $mobile-width-max: 767px;
 $tablet-width-max: 1023px;
