Стилизация модалки и правки

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -12,16 +12,25 @@
   }
 }
 
+.features__container {
+  padding-right: 19%;
+  padding-left: 20%;
+
+  @media (max-width: $tablet-width-max) {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+
 .features__list {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: 299px;
   gap: 30px;
-  width: 83%;
   margin: 0 auto;
 
   @media (max-width: $tablet-width-max) {
-    width:auto;
+    width: auto;
     grid-template-rows: 305px 232px;
     grid-auto-rows: 232px;
   }
@@ -56,6 +65,13 @@
   }
 
   &:hover {
+    background-color: $feedback-color;
+    color: $white-color;
+
+    h3 {
+      color: $white-color;
+    }
+
     &::before {
       background-color: $white-color;
     }
@@ -89,15 +105,6 @@
     }
   }
 
-  &:hover {
-    background-color: $feedback-color;
-    color: $white-color;
-
-    h3 {
-      color: $white-color;
-    }
-  }
-
   @media (max-width: $tablet-width-max) {
     padding-top: 65px;
     padding-right: 20px;
@@ -112,7 +119,7 @@
 .features__item h3 {
   margin: 0;
   margin-bottom: 16px;
-  font-family: Roboto Condensed;
+  font-family: $main-font-family;
   font-weight: normal;
   font-size: 24px;
   line-height: 34px;
