--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -33,7 +33,7 @@ body {
 
 .page__title {
   margin: 0;
-  font-family: Roboto Condensed;
+  font-family: $main-font-family;
   font-weight: normal;
   font-size: 36px;
   line-height: 51px;
