--- a/source/sass/common.scss
+++ b/source/sass/common.scss
@@ -22,8 +22,8 @@
 
 .container {
   margin: 0 auto;
-  padding-left: 253px;
-  padding-right: 255px;
+  padding-left: 13%;
+  padding-right: 13%;
 
   @media (max-width: $tablet-width-max) {
     padding-left: 25px;
