--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,4 @@
 @import "./blocks/services.scss";
 @import "./blocks/feedback.scss";
 @import "./blocks/page-footer.scss";
+@import "./blocks/modal.scss";
