--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -20,9 +20,9 @@
 }
 
 .feedback__container {
-    margin: 0;
-    padding-left: 971px;
-    padding-right: 375px;
+  margin: 0;
+  padding-left: 51%;
+  padding-right: 19%;
 
   @media (max-width: $tablet-width-max) {
     padding-left: 91px;
@@ -106,7 +106,7 @@
 }
 
 .feedback__form-field input {
-  width:100%;
+  width: 100%;
   height: 48px;
   padding-left: 14px;
 
