--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -15,8 +15,8 @@
 
 .services__container {
   margin: 0;
-  padding-left: 375px;
-  padding-right: 375px;
+  padding-right: 19%;
+  padding-left: 20%;
 
   @media (max-width: $tablet-width-max) {
     margin: 0 auto;
@@ -79,16 +79,16 @@
       @include bg-image("services-production-tablet@1x.png");
 
       @media (min-resolution: 2dppx) {
-      @include bg-image("services-production-tablet@2x.png");
-    }
+        @include bg-image("services-production-tablet@2x.png");
+      }
     }
 
     @media (max-width: $mobile-width-max) {
       @include bg-image("services-production-mobile@1x.png");
 
       @media (min-resolution: 2dppx) {
-      @include bg-image("services-production-mobile@2x.png");
-    }
+        @include bg-image("services-production-mobile@2x.png");
+      }
     }
   }
 
@@ -103,16 +103,16 @@
       @include bg-image("services-montage-tablet@1x.png");
 
       @media (min-resolution: 2dppx) {
-      @include bg-image("services-montage-tablet@2x.png");
-    }
+        @include bg-image("services-montage-tablet@2x.png");
+      }
     }
 
     @media (max-width: $mobile-width-max) {
       @include bg-image("services-montage-mobile@1x.png");
 
       @media (min-resolution: 2dppx) {
-      @include bg-image("services-montage-mobile@2x.png");
-    }
+        @include bg-image("services-montage-mobile@2x.png");
+      }
     }
   }
 
@@ -127,16 +127,16 @@
       @include bg-image("services-components-tablet@1x.png");
 
       @media (min-resolution: 2dppx) {
-      @include bg-image("services-components-tablet@2x.png");
-    }
+        @include bg-image("services-components-tablet@2x.png");
+      }
     }
 
     @media (max-width: $mobile-width-max) {
       @include bg-image("services-components-mobile@1x.png");
 
       @media (min-resolution: 2dppx) {
-      @include bg-image("services-components-mobile@2x.png");
-    }
+        @include bg-image("services-components-mobile@2x.png");
+      }
     }
   }
 }
@@ -148,7 +148,7 @@
   padding-top: 48px;
   padding-right: 30px;
   padding-left: 44px;
-  font-family: Roboto Condensed;
+  font-family: $main-font-family;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
