--- a/source/sass/blocks/site-button.scss
+++ b/source/sass/blocks/site-button.scss
@@ -3,7 +3,7 @@
   padding-top: 14px;
   padding-bottom: 14px;
   color: $white-color;
-  font-family: Roboto Condensed;
+  font-family: $main-font-family;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -16,7 +16,7 @@
   &:hover,
   &:active,
   &:focus {
-    transition-duration: .2s;
+    transition-duration: 0.2s;
     outline: none;
   }
 }
