--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,8 +7,11 @@ $feedback-color: #00b2ff;
 $feedback-hover-color: #255d75;
 $border-color: #ebebeb;
 $services-item-back: #c4c4c4;
-$input-back-color: rgba(255,255,255, 0.1);
+$input-back-color: rgba(255, 255, 255, 0.1);
 $footer-social-links:#cdcdcd;
+$overlay-color: rgba(0, 0, 0, 0.5);
+
+$main-font-family: "Roboto Condensed", "Arial", sans-serif;
 
 $mobile-width-max: 767px;
 $tablet-width-max: 1023px;
