--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.feedback__title {
+.feedback h2 {
   margin-bottom: 8px;
   color: $white-color;
 
@@ -49,7 +49,7 @@
   }
 }
 
-.feedback__description {
+.feedback p {
   margin: 0;
   margin-bottom: 53px;
   padding-left: 4px;
@@ -61,7 +61,7 @@
   }
 }
 
-.feedback__form {
+.feedback form {
   position: relative;
 
   &::before {
@@ -108,14 +108,14 @@
 .feedback__form-field input {
   width: 100%;
   height: 48px;
-  padding-left: 14px;
+  padding: 14px;
 
   @media (max-width: $tablet-width-max) {
     height: 53px;
   }
 }
 
-.feedback__form textarea {
+.feedback textarea {
   width: 100%;
   height: 154px;
   margin-bottom: 41px;
