--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+  padding-bottom: 89px;
   background-image: url("../img/header-device-desktop@1x.png"), url("../img/icon-header-triangle.svg"), url("../img/header-background-desktop@1x.jpg");
   background-repeat: no-repeat, no-repeat, no-repeat;
   background-color: $header-back-color;
@@ -6,6 +7,7 @@
   background-position: 85% 71%;
 
   @media (max-width: $tablet-width-max) {
+    padding-bottom: 0;
     background-size: 61%, cover, cover;
     background-position: 170% 33%, 50% -128px, center;
   }
@@ -20,7 +22,7 @@
   }
 }
 
-.page-header__title {
+.page-header h1 {
   margin: 0;
   margin-bottom: 29px;
   max-width: 718px;
@@ -48,7 +50,7 @@
   }
 }
 
-.page-header__description {
+.page-header p {
   position: relative;
   margin: 0;
   margin-bottom: 43px;
@@ -141,7 +143,6 @@
 
 .page-header__link {
   display: block;
-  margin-bottom: 89px;
   font-size: 14px;
   line-height: 16px;
   color: $white-color;
