--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -14,10 +14,6 @@
 }
 
 .services__container {
-  margin: 0;
-  padding-right: 19%;
-  padding-left: 20%;
-
   @media (max-width: $tablet-width-max) {
     margin: 0 auto;
     padding-left: 25px;
@@ -30,7 +26,7 @@
   }
 }
 
-.services__title {
+.services h2 {
   margin-bottom: 55px;
   color: $white-color;
 
@@ -49,12 +45,14 @@
 
 .services__list {
   display: grid;
+  max-width: 82%;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 618px;
   gap: 30px;
   margin: 0 auto;
 
   @media (max-width: $tablet-width-max) {
+    max-width: auto;
     grid-template-columns: auto;
     grid-auto-rows: 256px;
     gap: 46px;
@@ -175,4 +173,9 @@
     padding-top: 21px;
     padding-left: 35px;
   }
+}
+
+.services__link span {
+  display: block;
+  width: 58%;
 }
