--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -9,19 +9,25 @@
   display: flex;
   position: relative;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding-top: 65px;
+  padding-right: 12%;
   padding-bottom: 25px;
+  padding-left: 13%;
   border-bottom: 1px solid $footer-border-color;
 
   @media (max-width: $tablet-width-max) {
     padding-top: 18px;
+    padding-right: 2%;
     padding-bottom: 6px;
+    padding-left: 0;
     flex-wrap: wrap;
     flex-direction: row;
   }
 
   @media (max-width: $mobile-width-max) {
     padding-top: 47px;
+    padding-right: 0;
     padding-bottom: 5px;
     border-bottom: none;
   }
@@ -35,15 +41,12 @@
 }
 
 .page-footer__links {
-  padding-left: 13%;
-
   @media (max-width: $tablet-width-max) {
     display: flex;
     justify-content: space-between;
     width: 100%;
     margin-bottom: 38px;
     padding-bottom: 26px;
-    padding-left: 0;
     border-bottom: 1px solid $footer-border-color;
   }
 
@@ -89,12 +92,10 @@
 
   @media (max-width: $tablet-width-max) {
     padding-top: 11px;
-    padding-right: 9px;
   }
 
   @media (max-width: $mobile-width-max) {
     padding-top: 32px;
-    padding-right: 0;
     align-self: center;
   }
 }
@@ -106,7 +107,6 @@
 .page-footer h2 {
   margin: 0;
   margin-bottom: 25px;
-  max-width: 300px;
   font-family: $main-font-family;
   font-style: normal;
   font-weight: normal;
@@ -122,10 +122,7 @@
 }
 
 .page-footer__menu {
-  padding-right: 25px;
-
   @media (max-width: $tablet-width-max) {
-    padding-right: 0;
     padding-left: 3%;
   }
 
@@ -166,15 +163,8 @@
 }
 
 .page-footer__contacts {
-  padding-right: 12%;
-
-  @media (max-width: $tablet-width-max) {
-    padding-right: 2%;
-  }
-
   @media (max-width: $mobile-width-max) {
     width: 100%;
-    padding-right: 0;
     border-bottom: 1px solid $footer-border-color;
   }
 }
