--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -33,10 +33,9 @@
     width: 220px;
     height: 312px;
     top: 3px;
-    left: 345px;
+    right: 70%;
 
     @include bg-image("review-date@1x.png");
-    z-index: -1;
 
     @media (min-resolution: 2dppx) {
       @include bg-image("review-date@2x.png");
@@ -44,8 +43,10 @@
     }
 
     @media (max-width: $tablet-width-max) {
+      width: 248px;
       height: 358px;
-      left: -8px;
+      right: 0;
+      left: -1%;
     }
 
     @media (max-width: $mobile-width-max) {
@@ -55,7 +56,6 @@
 }
 
 .review h2 {
-  max-width: 500px;
   margin-bottom: 19px;
 
   @media (max-width: $tablet-width-max) {
