--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -28,11 +28,14 @@
 
 .services h2 {
   margin-bottom: 55px;
+  padding-left: 9%;
+  padding-right: 9%;
   color: $white-color;
 
   @media (max-width: $tablet-width-max) {
     margin-bottom: 41px;
-    padding-right: 90px;
+    padding-right: 13%;
+    padding-left: 0;
   }
 
   @media (max-width: $mobile-width-max) {
@@ -45,7 +48,7 @@
 
 .services__list {
   display: grid;
-  max-width: 82%;
+  max-width: 1170px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 618px;
   gap: 30px;
@@ -178,4 +181,12 @@
 .services__link span {
   display: block;
   width: 58%;
+
+  @media (max-width: $tablet-width-max) {
+    width: 25%;
+  }
+
+  @media (max-width: $mobile-width-max) {
+    width: 66%;
+  }
 }
