--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -1,4 +1,4 @@
 @mixin bg-image($img) {
-  background-image: url("#{$img-path}/#{$img}");
+  background-image: url("#{$img-path}#{$img}");
   background-repeat: no-repeat;
 }
