--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -10,6 +10,7 @@
   position: fixed;
   width: 490px;
   margin: auto;
+  padding-top: 20px;
   padding-bottom: 35px;
   top: 137px;
   right: 0;
@@ -77,11 +78,11 @@
 .modal__close {
   display: block;
   padding: 0;
-  position: relative;
+  position: absolute;
   width: 18px;
   height: 21px;
-  margin-left: 409px;
-  top: 13px;
+  top: -3px;
+  right: -24px;
   background-color: transparent;
   border: 0;
   cursor: pointer;
